--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,21 +1,16 @@
-# ベースイメージをnode:20（Debianベース）に変更
-# これにより、Alpine特有の依存関係の問題を回避できる可能性が高い
-FROM node:20 
+# 最もシンプルなベースイメージを使用し、Node.jsやアプリコードは含まない
+FROM alpine:latest 
 
-# 作業ディレクトリを設定
+# 作業ディレクトリは必須ではないが、一応設定
 WORKDIR /app
 
-# このCMDテストの間は、以下のCOPYとRUN npm installはコメントアウトします。
-# これにより、ビルドが速くなります。
-# COPY package*.json ./
-# RUN npm install --production && npm rebuild
-# COPY . .
+# 他のファイルやインストールは一切コピーしない・実行しない
 
 ENV PORT 8080
 EXPOSE 8080
 
 # ★★★ NEW DEBUGGING CMD START ★★★
-# 非常にシンプルなNode.jsスクリプトを実行し、ログを出力し続ける。
-# そして、簡易的なHTTPサーバーを起動して、Cloud Runがリクエストをルーティングできるか確認します。
-CMD ["/bin/sh", "-c", "while true; do echo 'Hello from Docker CMD!'; sleep 5; done"]
+# 最もシンプルな無限ループで、ログを出し続けることを目的とする
+# これでログが出なければ、CMDの実行かCloud Runのログ取り込みに根本問題がある
+CMD ["sh", "-c", "i=0; while true; do echo \"Hello, Test Container! Count: $i\"; i=$((i+1)); sleep 5; done"]
 # ★★★ NEW DEBUGGING CMD END ★★★
