--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,16 +1,48 @@
-# 最もシンプルなベースイメージを使用し、Node.jsやアプリコードは含まない
-FROM alpine:latest 
+# Stage 1: ビルドステージ - 開発ツールとnpm依存関係のインストール
+# ここで全てのnpm依存関係とネイティブモジュールをビルドします
+FROM node:20 AS builder
 
-# 作業ディレクトリは必須ではないが、一応設定
 WORKDIR /app
 
-# 他のファイルやインストールは一切コピーしない・実行しない
+# sharp が依存する libvips とその他のビルドツールをインストール (Debian/Ubuntu用)
+# build-essential は gcc など基本的なビルドツールを含む
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libvips-dev \
+    build-essential \
+    git \
+    libjpeg-turbo-dev \
+    libpng-dev \
+    librsvg-dev \
+    libwebp-dev \
+    openjpeg-dev \
+    zlib1g-dev \
+    pkg-config \
+    # 最後にaptキャッシュをクリーンアップ
+    && rm -rf /var/lib/apt/lists/*
+
+# package.json と package-lock.json をコピーして依存関係をインストール
+COPY package*.json ./
+# npm install と npm rebuild を実行して、ネイティブモジュールを確実にビルド
+RUN npm install --production && npm rebuild
+
+
+# Stage 2: 最終ステージ - 最小限のランタイム環境
+# 実行に必要なものだけを含む、より軽量なNode.jsイメージを使用
+FROM node:20-slim # node:20 よりさらに軽量
+
+# 作業ディレクトリを設定
+WORKDIR /app
+
+# ビルドステージから、コンパイル済みのnode_modules とアプリケーションのソースコードをコピー
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/. . # アプリケーションのソースコードをコピー
 
 ENV PORT 8080
 EXPOSE 8080
 
-# ★★★ NEW DEBUGGING CMD START ★★★
-# 最もシンプルな無限ループで、ログを出し続けることを目的とする
-# これでログが出なければ、CMDの実行かCloud Runのログ取り込みに根本問題がある
-CMD ["sh", "-c", "i=0; while true; do echo \"Hello, Test Container! Count: $i\"; i=$((i+1)); sleep 5; done"]
-# ★★★ NEW DEBUGGING CMD END ★★★
+# アプリケーションを起動するコマンド
+# これまでのデバッグログを維持しつつ、最終的なCMDに戻す
+# もしこれでログが出れば、server.jsのコードが実行されます。
+CMD ["node", "-e", "console.log('--- server.js script started execution (TOP OF FILE) ---'); require('./server.js');"]
+# もし、このCMDでもログが出ない場合、以下のような究極のデバッグCMDを試す
+# CMD ["node", "-e", "console.log('Node.js is running!'); setInterval(() => console.log('Still alive...'), 5000); require('http').createServer((req, res) => { console.log('Request received!'); res.end('Hello from test server'); }).listen(process.env.PORT || 8080, '0.0.0.0', () => console.log('Test server listening.'));"]
