--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,10 @@
-# ベースイメージはnode:20（Debianベース）に変更
-FROM node:20 
+# 最もシンプルなベースイメージを使用し、Node.jsやアプリコードは含まない
+FROM alpine:latest 
 
-# 作業ディレクトリを設定
+# 作業ディレクトリは必須ではないが、一応設定
 WORKDIR /app
 
-# これらの行は、このCMDテストの間はコメントアウトしたままにします。
+# Node.js やアプリケーションコードは一切含めない
 # COPY package*.json ./
 # RUN npm install --production && npm rebuild
 # COPY . .
@@ -13,7 +13,7 @@ ENV PORT 8080
 EXPOSE 8080
 
 # ★★★ NEW DEBUGGING CMD START ★★★
-# 非常にシンプルなNode.jsスクリプトを実行し、ログを出力し続ける。
-# そして、簡易的なHTTPサーバーを起動して、Cloud Runがリクエストをルーティングできるか確認します。
-CMD ["node", "-e", "console.log('Node.js is running!'); setInterval(() => console.log('Still alive...'), 5000); require('http').createServer((req, res) => { console.log('Request received!'); res.end('Hello from test server'); }).listen(process.env.PORT || 8080, '0.0.0.0', () => console.log('Test server listening.'));"]
+# 最もシンプルなシェルコマンドを実行し、ログを出し続けることを目的とする
+# date コマンドのために coreutils をインストールする
+CMD ["/bin/sh", "-c", "apk add --no-cache coreutils; while true; do date '+%Y-%m-%d %H:%M:%S - Hello, Test Container!'; sleep 5; done"]
 # ★★★ NEW DEBUGGING CMD END ★★★
