--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,22 +4,24 @@ FROM node:20 AS builder
 WORKDIR /app
 
 # sharp が依存する libvips とその他のビルドツールをインストール (Debian/Ubuntu用)
-# パッケージ名が正しくないためにエラーになっているので、より一般的なものを試す
+# 各行の末尾に「\」があることを確認してください。これにより、次の行も同じRUNコマンドの一部とみなされます。
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    libvips-dev \             # libvipsの開発ファイル
-    build-essential \         # gcc などの基本的なビルドツール
+    libvips-dev \
+    build-essential \
     git \
-    libjpeg-dev \             # ★ libjpeg-turbo-dev の代わりに libjpeg-dev を試す
-    libpng-dev \              # PNGサポート
-    librsvg2-dev \            # ★ librsvg-dev の代わりに librsvg2-dev を試す (librsvg2-2 なども候補)
-    libwebp-dev \             # WebPサポート
-    libopenjp2-7-dev \        # ★ openjpeg-dev の代わりに libopenjp2-7-dev を試す
-    zlib1g-dev \              # 圧縮ライブラリ
+    libjpeg-dev \
+    libpng-dev \
+    librsvg2-dev \
+    libwebp-dev \
+    libopenjp2-7-dev \
+    zlib1g-dev \
     pkg-config \
     && rm -rf /var/lib/apt/lists/*
 
+# package.json と package-lock.json をコピーして依存関係をインストール
 COPY package*.json ./
 RUN npm install --production && npm rebuild
+
 
 # Stage 2: 最終ステージ - 最小限のランタイム環境
 FROM node:20-slim 
@@ -32,4 +34,5 @@ COPY --from=builder /app/. .
 ENV PORT 8080
 EXPOSE 8080
 
+# アプリケーションを起動するコマンド
 CMD ["node", "server.js"]
