--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,5 @@
 steps:
+# バックエンドのビルドとデプロイ
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/${PROJECT_ID}/image-converter-backend', 'backend'] # backend ディレクトリをビルドコンテキストとして指定
   dir: '.' # リポジトリのルートで実行
@@ -10,10 +11,30 @@ steps:
   - 'deploy'
   - 'photo-converter' # Cloud Run サービス名 (前回設定したもの)
   - '--image'
-  - 'gcr.io/${PROJECT_ID}/photo-converter'
+  - 'gcr.io/${PROJECT_ID}/image-converter-backend' # イメージ名を修正
   - '--region'
   - 'asia-northeast1' # デプロイするリージョン (前回設定したもの)
   - '--platform'
   - 'managed'
   - '--allow-unauthenticated' # 未認証アクセスを許可
   - '--project=${PROJECT_ID}'
+
+# フロントエンドのビルドとデプロイ
+- name: 'gcr.io/cloud-builders/npm'
+  args: ['install']
+  dir: 'frontend' # frontend ディレクトリで実行
+
+- name: 'gcr.io/cloud-builders/npm'
+  args: ['run', 'build']
+  dir: 'frontend' # frontend ディレクトリで実行
+
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  entrypoint: gsutil
+  args:
+  - '-m'
+  - 'rsync'
+  - '-r'
+  - 'frontend/dist' # Vite のデフォルトのビルド出力ディレクトリ
+  - 'gs://photo-converter-frontend-matsuishi' # ここをあなたのCloud Storageバケット名に置き換えてください
+  # Cloud Storage バケットは事前に作成しておく必要があります。
+  # 例: gs://my-image-converter-frontend-bucket
