--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,8 @@ jobs:
       - name: Build
         run: npm run build
         working-directory: ./frontend
+        env:
+          VITE_API_URL: https://photo-converter-350490003884.asia-northeast1.run.app
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
